--- a/cropper.html
+++ b/cropper.html
@@ -72,14 +72,8 @@ app = Vue.createApp({
       document.body.removeChild(img);
    }
     return {
-      page: 0,
-      max_page: 0,
-      pdf: 'sample.pdf',
       img: img_url,
-      image: {
-        width: 0,
-        height: 0
-      },
+      image: {width: 0, height: 0},
       coordinates: {
 				width: 0,
 				height: 0,
